--- a/core/src/main/assets/messages/actors/actors.properties
+++ b/core/src/main/assets/messages/actors/actors.properties
@@ -390,7 +390,9 @@ actors.buffs.weakness.desc=Everything suddenly seems much heavier.\n\nWeakening 
 actors.buffs.wellfed.name=well fed
 actors.buffs.wellfed.desc=You feel quite satisfied and full.\n\nWhile well fed, your hunger will not increase, and you will heal an additional amount of health over time.\n\nTurns remaining: %d.
 
-
+actors.buffs.soggy.name=soggy
+actors.buffs.soggy.desc=You feel all wet! \n\nBeing wet makes you more suscettible to frost and chilling, and makes you unable to use scrolls. \n\nThankfully, it also gives you a shield against burning.\n\nTurns remaining: %d.
+actors.buffs.soggy.heromsg=You feel wet!
 
 ###hero
 
@@ -580,6 +582,9 @@ actors.hero.herosubclass.champion_desc=The Champion is a master of melee weapons
 actors.hero.herosubclass.monk=monk
 actors.hero.herosubclass.monk_short_desc=The _Monk_ builds energy while fighting. This energy can be spent on a variety of unique abilities.
 actors.hero.herosubclass.monk_desc=The Monk is a master of physical technique. As she defeats enemies, she gains energy which can be used on a variety of defensive and utlity-focused abilities. This energy does not fade over time, but has a cap based on the Monk's level.
+actors.hero.herosubclass.lightbender=lightbender
+actors.hero.herosubclass.lightbender_desc=The _Lightbender_ is a powerful wizard, which bends the dark forces of the dungeon to its own, channeling that dark magic to summon two orbs of light to come and aid him.\n\nThe orbs can hold a wand, and will shoot when the lightbender uses their staff.\nThe orbs always follow the lightbender, but the mobs will always choose to attack the hero.
+actors.hero.herosubclass.lightbender_short_desc=The _Lightbender_ summons two orbs of light which can hold wands to aid them.
 
 ##talents
 actors.hero.talent$improvisedprojectilecooldown.name=improvised projectiles cooldown
@@ -1329,3 +1334,23 @@ actors.char.kill=%s killed you...
 actors.char.defeat=you defeated %s.
 actors.char.def_verb=dodged
 actors.char.invulnerable=invulnerable
+
+actors.mobs.lightorb$wndorbsmanage.orb1=Equip wand
+actors.mobs.lightorb$wndorbsmanage.move=Move
+actors.mobs.lightorb$wndorbsmanage.direct=Direct
+actors.mobs.lightorb$wndorboutfit.desc=O caelesti sphaerae, quod artificium hoc accipere opus tuum permanere subsignata in auxilio opus nefaria.
+actors.mobs.lightorb$wndorboutfit.title=Choose a wand
+actors.mobs.lightorb$wndorboutfit.wandprompt=Choose a wand
+actors.mobs.lightorb$wndorboutfit.cant_unique=Don't give the orb your personal staff!
+actors.mobs.lightorb$wndorboutfit.cant_unidentified=The orb flashes with light, rejecting the wand: it needs to know what it's working with!
+actors.mobs.lightorb$wndorboutfit.cant_cursed=The orb flashes with light, rejecting the wand: the dark magic emanating from the wand disgusts it. 
+
+actors.mobs.lightorb2$wndorbsmanage.orb1=Equip wand
+actors.mobs.lightorb2$wndorbsmanage.move=Move
+actors.mobs.lightorb2$wndorbsmanage.direct=Direct
+actors.mobs.lightorb2$wndorboutfit.desc=O caelesti sphaerae, quod artificium hoc accipere opus tuum permanere subsignata in auxilio opus nefaria.
+actors.mobs.lightorb2$wndorboutfit.title=Choose a wand
+actors.mobs.lightorb2$wndorboutfit.wandprompt=Choose a wand
+actors.mobs.lightorb2$wndorboutfit.cant_unique=Don't give the orb your personal staff!
+actors.mobs.lightorb2$wndorboutfit.cant_unidentified=The orb flashes with light, rejecting the wand: it needs to know what it's working with!
+actors.mobs.lightorb2$wndorboutfit.cant_cursed=The orb flashes with light, rejecting the wand: the dark magic emanating from the wand disgusts it. 
