--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -955,6 +955,7 @@ items.scrolls.scroll.tiwaz=scroll of TIWAZ
 items.scrolls.scroll.unknown_desc=An indecipherable magical rune is written on this parchment. Who knows what it will do when read aloud?
 items.scrolls.scroll.blinded=You can't read a scroll while blinded.
 items.scrolls.scroll.no_magic=You can't read a scroll while magic immune.
+items.scrolls.scroll.soggy=You can't read a scroll while it is wet.
 items.scrolls.scroll.cursed=Your cursed spellbook prevents you from invoking this scroll's magic! A scroll of remove curse might be strong enough to still work though...
 items.scrolls.scroll$placeholder.name=scroll
 
@@ -1602,6 +1603,7 @@ items.weapon.melee.mace.desc=The large iron head of this weapon inflicts substan
 
 items.weapon.melee.magesstaff.name=mage's staff
 items.weapon.melee.magesstaff.ac_imbue=IMBUE
+items.weapon.melee.magesstaff.ac_orbs=MANAGE ORBS
 items.weapon.melee.magesstaff.ac_zap=ZAP
 items.weapon.melee.magesstaff.prompt=Select a wand
 items.weapon.melee.magesstaff.imbue=You imbue your staff with the %s.
@@ -1978,6 +1980,7 @@ items.stylus.desc=This arcane stylus is made of some dark, very hard stone. Usin
 items.tengusmask.name=Tengu's mask
 items.tengusmask.ac_wear=WEAR
 items.tengusmask.used=The mask disintegrates as its power flows into you!
+items.tengusmask.orbsummon=Per lucem, ut summoniam te, aether iudicium! Auxilio me!
 items.tengusmask.desc=This mask fell off Tengu's face as he died, you can feel great magical power emanating from it. Was the mask Tengu's source of strength?\n\nWhen worn, the tremendous power of the mask will be transferred into you, enabling you to _choose a subclass for your hero._\n\nWhich subclass will you choose?
 
 items.torch.name=torch
