--- a/core/src/main/assets/messages/windows/windows.properties
+++ b/core/src/main/assets/messages/windows/windows.properties
@@ -16,6 +16,7 @@ windows.wndchoosesubclass.cancel=I'll decide later
 windows.wndchoosesubclass.are_you_sure=Are you sure you want to choose this subclass?
 windows.wndchoosesubclass.yes=Yes, I've made my choice.
 windows.wndchoosesubclass.no=No, I'll decide later.
+windows.wndchoosesubclass=
 
 windows.wndclass.mastery=Mastery
 
@@ -300,3 +301,12 @@ windows.wndwandmaker.dust=Oh, I see you have the dust! Don't worry about the wra
 windows.wndwandmaker.ember=Oh, I see you have the embers! I do hope the fire elemental wasn't too much trouble. As I promised, you can choose one of my high quality wands.
 windows.wndwandmaker.berry=Oh, I see you have the berry! I do hope the rotberry plant didn't trouble you too much. As I promised, you can choose one of my high quality wands.
 windows.wndwandmaker.farewell=Good luck in your quest, %s!
+
+windows.wndorboutfit.title=Choose a wand
+windows.wndorboutfit.desc=O caelesti sphaerae, quod artificium hoc accipere opus tuum permanere subsignata in auxilio opus nefaria.
+
+windows.lightorb$wndorbsmanage.orb1=Equip wand
+windows.lightorb$wndorbsmanage.move=Move
+
+actors.mobs.lightorb$wndorbsmanage.orb1=Equip wand
+actors.mobs.lightorb$wndorbsmanage.move=Move
